--- a/ccp-svelte/package.json
+++ b/ccp-svelte/package.json
@@ -23,13 +23,18 @@
 		"@types/p5": "^1.7.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
@@ -37,7 +42,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.17.0",
+		"clsx": "^2.1.0",
+		"lucide-svelte": "^0.323.0",
 		"p5": "^1.9.0",
-		"paper": "^0.12.17"
+		"paper": "^0.12.17",
+		"tailwind-merge": "^2.2.1",
+		"tailwind-variants": "^0.1.20"
 	}
 }
