--- a/ccp-svelte/package.json
+++ b/ccp-svelte/package.json
@@ -48,6 +48,7 @@
 		"lucide-svelte": "^0.323.0",
 		"p5": "^1.9.0",
 		"paper": "^0.12.17",
+		"qrcode-svg": "^1.1.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20"
 	}
